<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WiFi Direct</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">连接</string>
    <string name="disconnect_peer_button">断开</string>
    <string name="get_file_button">发送</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">选择接收作为server，发送作为client</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">我的信息</string>
    <string name="label_peers">已找到的设备</string>
    <string name="hello_world">Hello World!</string>
    <string name="filelist">已完成的文件</string>
    <string name="clear">清除</string>
    <string name="clear_info">全部清除</string>
    <string name="receive_file_button">接收</string>
        <style name="AppBaseTheme" parent="android:Theme.Light.NoTitleBar">
        <!--<style name="AppBaseTheme" parent="android:Theme.Holo">
            Theme customizations available in newer API levels can go in
            res/values-vXX/styles.xml, while customizations related to
            backward-compatibility can go here.
        -->
    </style>

    <!-- Application theme. -->
    <style name="AppTheme" parent="AppBaseTheme">
        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
    </style>
    
    <style name="NumberProgressBar_Default">
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_width">match_parent</item>

        <item name="progress_max">100</item>
        <item name="progress_current">0</item>

        <item name="progress_unreached_color">#CCCCCC</item>
        <item name="progress_reached_color">#3498DB</item>

        <item name="progress_text_size">10sp</item>
        <item name="progress_text_color">#3498DB</item>

        <item name="progress_reached_bar_height">1.5dp</item>
        <item name="progress_unreached_bar_height">0.75dp</item>
    </style>

    <style name="NumberProgressBar_Passing_Green">
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_width">match_parent</item>

        <item name="progress_max">100</item>
        <item name="progress_current">0</item>

        <item name="progress_unreached_color">#CCCCCC</item>
        <item name="progress_reached_color">#70A800</item>

        <item name="progress_text_size">10sp</item>
        <item name="progress_text_color">#70A800</item>

        <item name="progress_reached_bar_height">1.5dp</item>
        <item name="progress_unreached_bar_height">0.75dp</item>
    </style>

    <style name="NumberProgressBar_Beauty_Red">
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_width">match_parent</item>

        <item name="progress_max">100</item>
        <item name="progress_current">0</item>

        <item name="progress_unreached_color">#CCCCCC</item>
        <item name="progress_reached_color">#FF3D7F</item>
        <item name="progress_text_size">10sp</item>
        <item name="progress_text_color">#FF3D7F</item>

        <item name="progress_reached_bar_height">1.5dp</item>
        <item name="progress_unreached_bar_height">0.75dp</item>
    </style>

    <style name="NumberProgressBar_Warning_Red">
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_width">match_parent</item>

        <item name="progress_max">100</item>
        <item name="progress_current">0</item>

        <item name="progress_unreached_color">#CCCCCC</item>
        <item name="progress_reached_color">#E74C3C</item>
        <item name="progress_text_size">10sp</item>
        <item name="progress_text_color">#E74C3C</item>

        <item name="progress_reached_bar_height">1.5dp</item>
        <item name="progress_unreached_bar_height">0.75dp</item>
    </style>

    <style name="NumberProgressBar_Relax_Blue">
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_width">match_parent</item>

        <item name="progress_max">100</item>
        <item name="progress_current">0</item>

        <item name="progress_unreached_color">#CCCCCC</item>
        <item name="progress_reached_color">#6DBCDB</item>
        <item name="progress_text_size">10sp</item>
        <item name="progress_text_color">#6DBCDB</item>

        <item name="progress_reached_bar_height">1.5dp</item>
        <item name="progress_unreached_bar_height">0.75dp</item>
    </style>

    <style name="NumberProgressBar_Grace_Yellow">
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_width">match_parent</item>

        <item name="progress_max">100</item>
        <item name="progress_current">0</item>

        <item name="progress_unreached_color">#CCCCCC</item>
        <item name="progress_reached_color">#FFC73B</item>
        <item name="progress_text_size">10sp</item>
        <item name="progress_text_color">#FFC73B</item>

        <item name="progress_reached_bar_height">1.5dp</item>
        <item name="progress_unreached_bar_height">0.75dp</item>
    </style>

    <style name="NumberProgressBar_Funny_Orange">
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_width">match_parent</item>

        <item name="progress_max">100</item>
        <item name="progress_current">0</item>

        <item name="progress_unreached_color">#CCCCCC</item>
        <item name="progress_reached_color">#FF530D</item>
        <item name="progress_text_size">10sp</item>
        <item name="progress_text_color">#FF530D</item>

        <item name="progress_reached_bar_height">1.5dp</item>
        <item name="progress_unreached_bar_height">0.75dp</item>
    </style>

    <style name="NumberProgressBar_Twinkle_Night">
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_width">match_parent</item>

        <item name="progress_max">100</item>
        <item name="progress_current">0</item>

        <item name="progress_unreached_color">#CCCCCC</item>
        <item name="progress_reached_color">#ECF0F1</item>
        <item name="progress_text_size">10sp</item>
        <item name="progress_text_color">#ECF0F1</item>

        <item name="progress_reached_bar_height">1.5dp</item>
        <item name="progress_unreached_bar_height">0.75dp</item>
    </style>
</resources>
